unpackaged/main/default/objects/n2de__cls_Territory_log__c/n2de__cls_Territory_log__c.object-meta.xml
<CustomObject>
    <label>Classifier territory log</label>
    <nameField>
        <label>Classifier territory log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier territory logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>