unpackaged/main/default/objects/n2de__cls_Territory_log__c/fields/n2de__Clean_country__c.field-meta.xml
<CustomField>
    <fullName>n2de__Clean_country__c</fullName>
    <label>Clean country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>