unpackaged/main/default/objects/n2de__cls_Territory_log__c/fields/n2de__Clean_state__c.field-meta.xml
<CustomField>
    <fullName>n2de__Clean_state__c</fullName>
    <label>Clean state</label>
    <length>255</length>
    <type>Text</type>
</CustomField>