unpackaged/main/default/objects/n2de__cls_Territory_log__c/fields/n2de__Error_status_code__c.field-meta.xml
<CustomField>
    <fullName>n2de__Error_status_code__c</fullName>
    <description>Used to store an error status code received during the last failed attempt to save this record.</description>
    <label>Last error status code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>