unpackaged/main/default/objects/n2de__cls_Territory_log__c/fields/n2de__Matched_territory__c.field-meta.xml
<CustomField>
    <fullName>n2de__Matched_territory__c</fullName>
    <description>Territory found that matches this record&#39;s clean data - format is MapName.TerritoryName</description>
    <label>Matched territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>