unpackaged/main/default/objects/n2de__cls_Territory_log__c/fields/n2de__Matched_territory_level__c.field-meta.xml
<CustomField>
    <fullName>n2de__Matched_territory_level__c</fullName>
    <description>Which territory level we succeeded at matching this record on - country, state or zip</description>
    <label>Matched territory level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>