unpackaged/main/default/objects/n2de__cls_Territory_log__c/fields/n2de__sObject_Name__c.field-meta.xml
<CustomField>
    <fullName>n2de__sObject_Name__c</fullName>
    <label>sObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>